traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:13: error: ';' expected but ',' found.
  if(y==0 && diago<getMondeLargeur()){setPos(diag+1,0),return diag+1}
                                                      ^